--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   carousel_slider: ^4.0.0
   delayed_display: ^2.0.0
   flutter_carousel_slider: ^1.0.8
+  bloc: ^8.0.1
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
