--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_carousel_slider: ^1.0.8
   bloc: ^8.0.1
   flutter_bloc: ^8.0.1
+  fl_chart: ^0.45.0
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +79,8 @@ flutter:
     - assets/images/rafikti.png
     - assets/images/get_started.png
     - assets/images/card1.png
+    - assets/images/profile_photo.png
+    - assets/images/linkedIn_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
