--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   fl_chart: ^0.45.0
   flutter_slidable: ^1.2.0
-  #flutter_circular_slider: ^2.5.0
-  #sleek_circular_slider: ^2.0.1
+ 
   percent_indicator: ^4.0.0
   image_picker: ^0.8.4+8
   readmore: ^2.1.0
@@ -52,10 +51,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   timeline_tile: ^2.0.0
   shared_preferences: ^2.0.13
-  #firebase_storage: ^10.2.9
-  #firebase_core: ^1.13.1
-  #flutter_pdfview: ^1.2.2
-  #http: ^0.13.4
+
 
 
 
@@ -108,6 +104,7 @@ flutter:
     - assets/images/search.png
     - assets/images/technical_or_general.png
     - assets/images/person1.png
+    - assets/images/developer.jpg
 
 
 
